--- a/visual1.html
+++ b/visual1.html
@@ -95,10 +95,10 @@
             <h3 class="case-title mb-3">Walks of Life in Hong Kong</h3>
             <div class="photo-grid">
               <img src="picsforportfolio/DSCF1640.jpg" alt="Street 1">
-              <img src="picsforportfolio/DSCF1553.JPG" alt="Street 2">
+              <img src="picsforportfolio/DSCF1553.jpg" alt="Street 2">
               <img src="picsforportfolio/DSC03766.jpg" alt="Street 3">
-              <img src="picsforportfolio/DSCF1380-2.JPG" alt="Street 4">
-              <img src="picsforportfolio/DSCF1634.JPG" alt="Street 5">
+              <img src="picsforportfolio/DSCF1380-2.jpg" alt="Street 4">
+              <img src="picsforportfolio/DSCF1634.jpg" alt="Street 5">
             </div>
             <p class="case-description">
               Focuses on the movement of people in their everyday lives here.
