--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <a href="visual2.html" class="case-card">
           <div class="case-meta">PHOTOGRAPHY • GRADUATION • 2025</div>
           <h3 class="case-title">Graduation Season</h3>
-      <img src="../Final_Portfolio/picsforportfolio/DSCF8816.JPG" 
+      <img src="../Final_Portfolio/picsforportfolio/DSCF8816.jpg" 
        alt="Graduation Cover" 
        class="img-fluid rounded mt-3 mb-3 w-100" 
        style="height: 300px; object-fit: cover;">
