--- a/visual2.html
+++ b/visual2.html
@@ -89,7 +89,7 @@
         <img src="picsforportfolio/ucsd4.jpg" alt="Grad 5">
         <img src="picsforportfolio/ucsd8.jpg" alt="Grad 6">
         <img src="picsforportfolio/ucsd7.jpg" alt="Grad 7">
-        <img src="picsforportfolio/ucsd9.JPG" alt="Grad 8">
+        <img src="picsforportfolio/ucsd9.jpg" alt="Grad 8">
         <img src="picsforportfolio/ucsd6.jpg" alt="Grad 9">
       </div>
 
@@ -105,14 +105,14 @@
       <button class="slider-btn prev-btn">❮</button>
       
       <div class="slider-track">
-        <img src="picsforportfolio/berkstol.JPG" alt="Friends 1">
-        <img src="picsforportfolio/arnav1.JPG" alt="Friends 2">
-        <img src="picsforportfolio/manoj1.JPG" alt="Friends 3">
-        <img src="picsforportfolio/nicky1.JPG" alt="Friends 4">
+        <img src="picsforportfolio/berkstol.jpg" alt="Friends 1">
+        <img src="picsforportfolio/arnav1.jpg" alt="Friends 2">
+        <img src="picsforportfolio/manoj1.jpg" alt="Friends 3">
+        <img src="picsforportfolio/nicky1.jpg" alt="Friends 4">
         <img src="picsforportfolio/arnav2.jpg" alt="Friends 5">
-        <img src="picsforportfolio/manoj2.JPG" alt="Friends 6">
+        <img src="picsforportfolio/manoj2.jpg" alt="Friends 6">
         <img src="picsforportfolio/arnav3.jpg" alt="Friends 7">
-        <img src="picsforportfolio/berkgroup.JPG" alt="Friends 8">
+        <img src="picsforportfolio/berkgroup.jpg" alt="Friends 8">
         <img src="picsforportfolio/nicky2.jpg" alt="Friends 9">
       </div>
 
