--- a/visual3.html
+++ b/visual3.html
@@ -114,7 +114,7 @@
                 <img src="picsforportfolio/portrait13.jpg" alt="Candid 3">
                 <img src="picsforportfolio/portrait17.jpg" alt="Candid 4">
                 <img src="picsforportfolio/portrait1.jpg" alt="Candid 5">
-                <img src="picsforportfolio/DSCF1469.JPG" alt="Candid 6">
+                <img src="picsforportfolio/DSCF1469.jpg" alt="Candid 6">
               </div>
 
               <button class="slider-btn next-btn">❯</button>
