--- a/project2.html
+++ b/project2.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="mb-5">
-          <a href="../lab6a_harris/TingLab6PartA.html" target="_blank" class="btn btn-lg px-5 btn-accent">
+          <a href="lab6a_harris/TingLab6PartA.html" target="_blank" class="btn btn-lg px-5 btn-accent">
             Launch Live Project ↗
           </a>
           <p class="text-muted mt-2 small">Opens in a new tab</p>
