--- a/project1.html
+++ b/project1.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="mb-5">
-          <a href="../lab3_harris/studyBuddyFiles-LAB starter/index.html" target="_blank" class="btn btn-lg px-5 btn-accent">
+          <a href="lab3_harris/studyBuddyFiles-LAB starter/index.html" target="_blank" class="btn btn-lg px-5 btn-accent">
           Launch Live Project ↗
           </a>
           <p class="text-muted mt-2 small">Opens in a new tab</p>
